<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <PreferenceCategory android:title="General">

        <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label" />

        <EditTextPreference
            android:defaultValue="@string/settings_min_magnitude_default"
            android:inputType="numberDecimal"
            android:key="@string/settings_min_magnitude_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_min_magnitude_label" />

        <EditTextPreference
            android:defaultValue="@string/settings_num_item_default"
            android:inputType="numberDecimal"
            android:key="@string/settings_num_item_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_num_item_label" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Notification">

        <CheckBoxPreference
            android:defaultValue="@bool/show_notifications_by_default"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:title="@string/pref_enable_notifications_label" />

        <EditTextPreference
            android:defaultValue="@string/settings_min_mag_notify_default"
            android:dependency="@string/pref_enable_notifications_key"
            android:inputType="numberDecimal"
            android:key="@string/settings_min_mag_notify_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_min_mag_notify_label" />

    </PreferenceCategory>

</PreferenceScreen>